# double_jearm_moveit_config

./: .setup_assistant  CMakeLists.txt  README.md  kappa.csv  kappa.mat  kappa_cpp.csv  p.csv  p.mat  package.xml  smoothness_frequency_metrics.m  test_joint_state_14.csv  test_joint_state_7.csv
config/: 1.rviz  D_JEARM.ros2_control.xacro  D_JEARM.srdf  D_JEARM.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_cpp.yaml  ros2_controllers.yaml
csv/: smoothness_scores.csv
include/: smoothness_metrics_utils.h
launch/: fk_from_csv.launch.py  jitter_metrics.launch.py  joint_state_replay.launch.py  rviz_robot_model.launch.py
src/: fk_from_csv.cpp  jitter_demo.cpp  jitter_metrics.cpp  joint_state_replay.cpp  smoothness_metrics_utils.cpp
